# Quadrocopter_STM32

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  README.md  compose.yaml  workspace.code-workspace
Components/: CMakeLists.txt
Components/MPU6050/: CMakeLists.txt  MPU6050.cpp  MPU6050.hpp
Controller/Inc/: controll_master.hpp
Controller/Src/: PID.cpp  controll_master.cpp  motor_controller.cpp
Core/Inc/: data_types.hpp  main.h  parameters.hpp  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: freertos.c  main.cpp  stm32f4xx_it.c
Docs/arch/: Quadrocopter.vpp  Quadrocopter.vpp.bak_000f  Quadrocopter.vpp.bak_001d  Quadrocopter.vpp.bak_002d  Quadrocopter.vpp.bak_003d  Quadrocopter.vpp.bak_004d  Quadrocopter.vpp.bak_005d  Quadrocopter.vpp.bak_006d
QuadrocopterTest/: CMakeLists.txt  Makefile
QuadrocopterTest/stubs/: stm32f4xx_hal.cpp  stm32f4xx_hal.h
QuadrocopterTest/tests/: CMakeLists.txt  ControllMasterTest.cpp  MotorControllTest.cpp  UARTLoggerTest.cpp  diagnosticViaUARTTest.cpp
Sensordata/Inc/: HMC5883L.hpp  I2Cdev.hpp  OsFuncAdapter.hpp  UART_Communication.hpp  i2cAdapter.hpp  sensor_master.hpp
Sensordata/Src/: HMC5883L.cpp  HMC5883L_2.cpp  I2Cdev.cpp  Kalman.cpp  OsFuncAdapter.cpp  UART_Communication.cpp  i2cAdapter.cpp  sensor_master.cpp
interfaces/: I2C_Interface.hpp  OsFunc_interface.hpp
overall/: FREE_RTOS_operators.hpp
tools/CubeMX/: .mxproject  CMakeLists.txt  Makefile  quadrocopter_high.ioc  quadrocopter_low.ioc
tools/CubeMX/Core/Inc/: FreeRTOSConfig.h  parameters.hpp
tools/CubeMX/Core/Src/: main.c  stm32f4xx_hal_msp.c
tools/CubeMX/cmake/stm32cubemx/: CMakeLists.txt
tools/board_specific/: gcc-arm-none-eabi.cmake
tools/env_tools/: stm_link.sh
